--- a/application/admin/view/cms/book/edit.html
+++ b/application/admin/view/cms/book/edit.html
@@ -72,6 +72,7 @@
         <div class="col-xs-12 col-sm-8">
 
             <script type="text/javascript" charset="utf-8" src="__CDN__/assets/addons/ueditor/ueditor.config.js"></script>
+            <!--<script type="text/javascript" charset="utf-8" src="__CDN__/assets/addons/ueditor/ueditor.all.js"> </script>-->
             <script type="text/javascript" charset="utf-8" src="__CDN__/assets/addons/ueditor/ueditor.all.min.js"> </script>
             <script type="text/javascript" charset="utf-8" src="__CDN__/assets/addons/ueditor/lang/zh-cn/zh-cn.js"></script>
             <script>var ue = UE.getEditor('editor');</script>
